--- a/src/view/MainWindow.fxml
+++ b/src/view/MainWindow.fxml
@@ -3,7 +3,6 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.Slider?>
 <?import javafx.scene.control.TableColumn?>
@@ -12,6 +11,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 
 <AnchorPane fx:id="window" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/11" xmlns:fx="http://javafx.com/fxml/1">
@@ -78,14 +78,14 @@
                         <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                      </VBox.margin>
                   </Label>
-                  <ScrollPane prefHeight="150.0">
-                     <content>
-                        <TableView fx:id="table" editable="true" prefWidth="1.7976931348623157E308" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308">
+                  <StackPane prefHeight="150.0" prefWidth="200.0">
+                     <children>
+                        <TableView fx:id="table" prefHeight="200.0" prefWidth="200.0">
                           <columns>
                           </columns>
                         </TableView>
-                     </content>
-                  </ScrollPane>
+                     </children>
+                  </StackPane>
                </children>
             </VBox>
             <VBox maxHeight="1.7976931348623157E308" prefWidth="200.0" HBox.hgrow="NEVER">
