--- a/src/view/MainWindow.fxml
+++ b/src/view/MainWindow.fxml
@@ -139,12 +139,12 @@
                      </VBox.margin>
                   </Separator>
                   <Label text="Zone" />
-                  <Label text="Geohash Precision">
+                  <Label fx:id="geohashPrecisionLabel" text="Geohash Precision">
                      <VBox.margin>
                         <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                      </VBox.margin>
                   </Label>
-                  <Slider fx:id="precisionSlider" majorTickUnit="10.0" max="30.0" minorTickCount="10" showTickLabels="true" showTickMarks="true">
+                  <Slider fx:id="precisionSlider" majorTickUnit="1.0" min="1.0" max="4.0" minorTickCount="0" showTickLabels="true" showTickMarks="true">
                      <VBox.margin>
                         <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                      </VBox.margin>
